crates/monochange/src/snapshots/monochange____tests__add_change_file_allows_none_with_caused_by_context.snap
---
source: crates/monochange/src/__tests.rs
expression: content
---
---
core:
  bump: none
  caused_by: ["sdk"]
---

# dependency-only follow-up
