crates/monochange/src/snapshots/monochange____tests__add_change_file_rejects_none_without_type_or_version.snap
---
source: crates/monochange/src/__tests.rs
expression: error.to_string()
---
config error: target `core` must not use a `none` bump without also declaring `type`, `version`, or `caused_by`
