crates/monochange/src/snapshots/monochange____tests__add_interactive_change_file_renders_caused_by_context_for_none_bumps.snap
---
source: crates/monochange/src/__tests.rs
expression: content
---
---
core:
  bump: none
  caused_by: ["sdk"]
---

# dependency follow-up
