crates/monochange/src/snapshots/monochange____tests__apply_versioned_file_definition_reports_invalid_glob_pattern.snap
---
source: crates/monochange/src/__tests.rs
expression: error.to_string()
---
config error: invalid glob pattern `[invalid`: Pattern syntax error near position [POS]: invalid range pattern
