crates/monochange/src/snapshots/monochange____tests__apply_versioned_file_definition_reports_missing_ecosystem_type.snap
---
source: crates/monochange/src/__tests.rs
expression: error.to_string()
---
config error: versioned file `Cargo.toml` is missing an ecosystem type
