crates/monochange/src/snapshots/monochange____tests__read_cached_text_document_returns_error_for_invalid_utf8_on_disk.snap
---
source: crates/monochange/src/__tests.rs
expression: error.to_string()
---
config error: failed to parse [ROOT]/binary.bin as text: invalid utf-8 sequence of 1 bytes from index 0
