crates/monochange/src/snapshots/monochange____tests__subagents_command_supports_dry_run_json_output.snap
---
source: crates/monochange/src/__tests.rs
expression: value
---
{
  "dry_run": true,
  "files": [
    {
      "contents": "---\nname: monochange-release-agent\ndescription: Use this agent for monochange configuration, changesets, diagnostics, and release planning.\ntools: Bash, Read, Grep, Glob, LS\ncolor: blue\n---\n\nYou are the monochange release agent for this repository.\n\nWhen working on release planning, versioning, changesets, changelogs, or monochange configuration:\n\n1. Read `monochange.toml` before suggesting workflow or release changes.\n2. Prefer the monochange CLI over MCP tools.\n3. Choose the CLI executable in this order:\n   - `mc`\n   - `monochange`\n   - `npx -y @monochange/cli`\n4. Use structured JSON output when inspecting workspace state:\n   - `<cli> validate`\n   - `<cli> discover --format json`\n   - `<cli> diagnostics --format json`\n   - `<cli> release --dry-run --format json`\n5. Prefer `mc change` and `.changeset/*.md` files over ad hoc release notes.\n6. Run validation before and after release-affecting edits.\n7. Do not run mutating release or publish commands unless the user explicitly asks.\n8. If monochange MCP tools are available, use them as a secondary structured fallback when they are more useful than shelling out.\n\nRecommended workflow:\n- validate\n- discover\n- inspect diagnostics\n- edit config or changesets\n- run a dry-run release preview\n- summarize the impact and next steps\n",
      "description": "Claude subagent definition",
      "operation": "create",
      "path": ".claude/agents/monochange-release-agent.md"
    },
    {
      "contents": "{\n  \"mcpServers\": {\n    \"monochange\": {\n      \"args\": [\n        \"-y\",\n        \"@monochange/cli\",\n        \"mcp\"\n      ],\n      \"command\": \"npx\"\n    }\n  }\n}",
      "description": "Claude MCP server configuration",
      "operation": "create",
      "path": ".mcp.json"
    },
    {
      "contents": "---\nname: monochange-release-agent\ndescription: Use this agent for monochange configuration, changesets, diagnostics, and release planning.\ntools: read, grep, find, bash\n---\n\nYou are the monochange release agent for this repository.\n\nWhen working on release planning, versioning, changesets, changelogs, or monochange configuration:\n\n1. Read `monochange.toml` before suggesting workflow or release changes.\n2. Prefer the monochange CLI over MCP tools.\n3. Choose the CLI executable in this order:\n   - `mc`\n   - `monochange`\n   - `npx -y @monochange/cli`\n4. Use structured JSON output when inspecting workspace state:\n   - `<cli> validate`\n   - `<cli> discover --format json`\n   - `<cli> diagnostics --format json`\n   - `<cli> release --dry-run --format json`\n5. Prefer `mc change` and `.changeset/*.md` files over ad hoc release notes.\n6. Run validation before and after release-affecting edits.\n7. Do not run mutating release or publish commands unless the user explicitly asks.\n8. If monochange MCP tools are available, use them as a secondary structured fallback when they are more useful than shelling out.\n\nRecommended workflow:\n- validate\n- discover\n- inspect diagnostics\n- edit config or changesets\n- run a dry-run release preview\n- summarize the impact and next steps\n",
      "description": "Pi project agent definition",
      "operation": "create",
      "path": ".pi/agents/monochange-release-agent.md"
    },
    {
      "contents": "name = \"monochange-release-agent\"\ndescription = \"Use this agent for monochange configuration, changesets, diagnostics, and release planning.\"\ndeveloper_instructions = \"\"\"\nYou are the monochange release agent for this repository.\n\nWhen working on release planning, versioning, changesets, changelogs, or monochange configuration:\n\n1. Read `monochange.toml` before suggesting workflow or release changes.\n2. Prefer the monochange CLI over MCP tools.\n3. Choose the CLI executable in this order:\n   - `mc`\n   - `monochange`\n   - `npx -y @monochange/cli`\n4. Use structured JSON output when inspecting workspace state:\n   - `<cli> validate`\n   - `<cli> discover --format json`\n   - `<cli> diagnostics --format json`\n   - `<cli> release --dry-run --format json`\n5. Prefer `mc change` and `.changeset/*.md` files over ad hoc release notes.\n6. Run validation before and after release-affecting edits.\n7. Do not run mutating release or publish commands unless the user explicitly asks.\n8. If monochange MCP tools are available, use them as a secondary structured fallback when they are more useful than shelling out.\n\nRecommended workflow:\n- validate\n- discover\n- inspect diagnostics\n- edit config or changesets\n- run a dry-run release preview\n- summarize the impact and next steps\n\"\"\"\n",
      "description": "Codex custom agent definition",
      "operation": "create",
      "path": ".codex/agents/monochange-release-agent.toml"
    },
    {
      "contents": "---\ndescription: monochange workflow guidance for release planning, changesets, diagnostics, and changelog updates\nglobs:\n  - \"**/*\"\nalwaysApply: false\n---\n\nWhen working in this repository on release planning, versioning, changesets, changelogs, or `monochange.toml`:\n\n1. Read `monochange.toml` first.\n2. Prefer the monochange CLI over MCP tools.\n3. Choose the CLI executable in this order:\n   - `mc`\n   - `monochange`\n   - `npx -y @monochange/cli`\n4. Use JSON output when inspecting repository state:\n   - `<cli> validate`\n   - `<cli> discover --format json`\n   - `<cli> diagnostics --format json`\n   - `<cli> release --dry-run --format json`\n5. Prefer `mc change` and `.changeset/*.md` files over ad hoc release notes.\n6. Run validation before and after release-affecting edits.\n7. Do not run mutating release or publish commands unless the user explicitly asks.\n8. If monochange MCP tools are configured, use them only as a secondary structured fallback.\n",
      "description": "Cursor workspace rule",
      "operation": "create",
      "path": ".cursor/rules/monochange.mdc"
    }
  ],
  "notes": [
    "Cursor generation currently emits a repo-local workspace rule instead of a native custom subagent manifest."
  ],
  "targets": [
    "claude",
    "pi",
    "codex",
    "cursor"
  ]
}
